--- a/packages/dashboard-frontend/src/components/Workspace/Status/index.module.css
+++ b/packages/dashboard-frontend/src/components/Workspace/Status/index.module.css
@@ -11,15 +11,15 @@
 }
 
 .statusLabel .pf-m-success svg {
-  fill: var(--pf-t--global--icon--color--status--success--default);
+  fill: #3c8e01f5;
 }
 
 .statusLabel .pf-m-info svg {
-  fill: var(--pf-t--global--icon--color--status--info--default);
+  fill: #5b2eed;
 }
 
 .statusLabel .pf-m-warning svg {
-  fill: var(--pf-t--global--icon--color--status--warning--default);
+  fill: #d27a18;
 }
 
 svg.rotate {
